--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,37 @@
-# build output
-dist/
-# generated types
-.astro/
-
 # dependencies
-node_modules/
+/node_modules
+/.pnp
+.pnp.*
 
-# logs
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
+.pnpm-debug.log*
 
+# env files
+.env*
 
-# environment variables
-.env
-.env.production
+# vercel
+.vercel
 
-# macOS-specific files
-.DS_Store
+# typescript
+*.tsbuildinfo
+next-env.d.ts
 
-# jetbrains setting folder
-.idea/
+# project backup
+_backup_astro/
